--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,8 @@ out/production/BB/META-INF/BB.kotlin_module
 out/production/BB/Sound/explosion_large_distant.mp3
 out/production/BB/Sound/Orbit Beat 130.wav
 out/production/BB/Sound/sound_spark_Laser-Like_Synth_Basic_Laser2_07.mp3
+src/.DS_Store
+src/.DS_Store
+src/.DS_Store
+src/.DS_Store
+src/.DS_Store
